overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+    overflow: hidden;
+    height: 100%;
+}
+
+body {
+    height: 100%;
+    overflow: auto;
+} 
 
 .App{
     user-select: none;
 }
+
